--- a/index.html
+++ b/index.html
@@ -117,9 +117,25 @@
             <div class="container">
                 <h2 class="section-tittle">What we do</h2>
                 <ul class="images-list">
-                    <li><img src="./images/laptop.jpg" alt="laptop" width="370" height="294"></li>
-                    <li><img src="./images/apps.jpg" alt="apps" width="370" height="294"></li>
-                    <li><img src="./images/tablet.jpg" alt="tablet" width="370" height="294"></li>
+                    <li class="motto-cards-elements">
+                        <img src="./images/laptop.jpg" alt="laptop" width="370" height="294">
+                        <div class="overlay-text">
+                            <h2>DESKTOP APPS</h2>
+                        </div>
+                    
+                    </li>
+                    <li class="motto-cards-elements">
+                        <img src="./images/apps.jpg" alt="apps" width="370" height="294">
+                        <div class="overlay-text">
+                            <h2>Mobile APPS</h2>
+                        </div>
+                    </li>
+                    <li class="motto-cards-elements">
+                        <img src="./images/tablet.jpg" alt="tablet" width="370" height="294">
+                        <div class="overlay-text">
+                            <h2>DESIGN SOLUTIONS</h2>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
