--- a/portofolio.html
+++ b/portofolio.html
@@ -55,13 +55,18 @@
 </div>
 </section>
         <!--Descriptions images-->
-        <div class="container">
-        <section>
-
+    <section>
                 <ul class="portofolio-images">
-                    <li class="portfol-list-item"> <img src="images/desktop_people.jpg" alt="images with people on desktop" width="370"
+                        <li class="portfol-list-item">
+                            <img src="images/desktop_people.jpg" alt="images with people on desktop" width="370"
                             height="294">
-                        <div class="portofolio-box">
+            <div class="overlay-layer">
+                <h2 class="overlay-text">
+                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital
+                    espionage and attacks on competitors' secure servers.
+                </h2>
+            </div>
+                    <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Technoduck</h3>
                             <p class="portofolio-description">Web-site</p>
                         </div>
@@ -118,7 +123,7 @@
                 </ul>
             
             </section>
-        </div>
+    
     </main>
     <!--Footer section-->
     <footer class="footer-section">
