--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div>
                 <nav class="header-nav">
                     <ul class="header-list">
-                        <li><a class="header-link" href="studio">Studio</a></li>
+                        <li><a class="header-link current" href="studio">Studio</a></li>
                         <li><a class="header-link" href="./portofolio.html">Portofolio</a></li>
                         <li><a class="header-link" href="contacts">Contacts</a></li>
                     </ul>
@@ -119,20 +119,20 @@
                 <ul class="images-list">
                     <li class="motto-cards-elements">
                         <img src="./images/laptop.jpg" alt="laptop" width="370" height="294">
-                        <div class="overlay-text">
+                        <div class="service-img-title">
                             <h2>DESKTOP APPS</h2>
                         </div>
                     
                     </li>
                     <li class="motto-cards-elements">
                         <img src="./images/apps.jpg" alt="apps" width="370" height="294">
-                        <div class="overlay-text">
+                        <div class="service-img-title">
                             <h2>Mobile APPS</h2>
                         </div>
                     </li>
                     <li class="motto-cards-elements">
                         <img src="./images/tablet.jpg" alt="tablet" width="370" height="294">
-                        <div class="overlay-text">
+                        <div class="service-img-title">
                             <h2>DESIGN SOLUTIONS</h2>
                         </div>
                     </li>
@@ -398,7 +398,7 @@
                         </a>
                     </li>
                     <li class="footer-list-icon">
-                        <a class="footer-item-icons" href="" aria-label="lincedin" target="_blank"
+                        <a class="footer-item-icons" href="" aria-label="linkedin" target="_blank"
                             rel="noopener noreferrer">
                             <svg class="team-icon" width="20" height="20">
                                 <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
