--- a/portofolio.html
+++ b/portofolio.html
@@ -26,7 +26,7 @@
             <nav class="header-nav">
                 <ul class="header-list">
                     <li><a class="header-link" href="./index.html">Studio</a></li>
-                    <li><a class="header-link" href="portofolio.html">Portfolio</a></li>
+                    <li><a class="header-link current" href="portofolio.html">Portofolio</a></li>
                     <li><a class="header-link" href="contacts">Contacts</a></li>
                     </ul>
                     </nav>
@@ -57,68 +57,141 @@
         <!--Descriptions images-->
     <section>
                 <ul class="portofolio-images">
-                        <li class="portfol-list-item">
+                        <li class="scroll">
+                            <a class="link-portofolio" href="./portofolio.html">
+                                <div class="overlay-port">
                             <img src="images/desktop_people.jpg" alt="images with people on desktop" width="370"
-                            height="294">
-            <div class="overlay-layer">
-                <h2 class="overlay-text">
-                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital
-                    espionage and attacks on competitors' secure servers.
-                </h2>
-            </div>
+                            height="294"> 
+            <p class="overlay-text">
+                Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital
+                espionage and attacks on competitors' secure servers.</p>
+                </div>
                     <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Technoduck</h3>
                             <p class="portofolio-description">Web-site</p>
                         </div>
+                            </a>
                     </li>
-                    <li class="portfol-list-item"> <img src="images/basketball.jpg" alt="basketball game">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/basketball.jpg" alt="basketball game">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Poster New Orlean vs Golden Star</h3>
                             <p class=portofolio-description>Design</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"> <img src="images/seafood.jpg" alt="seafood restaurant" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/seafood.jpg" alt="seafood restaurant" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Seafood Restaurant </h3>
                             <p class=portofolio-description>Apps</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"><img src="images/eaephones.jpg" alt="earphones" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/eaephones.jpg" alt="earphones" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Project Prime</h3>
                             <p class=portofolio-description>Marketing</p>
                         </div>
+                    </a>
 
                     </li>
-                    <li class="portfol-list-item"><img src="images/boxes.jpg" alt="project boxes" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/boxes.jpg" alt="project boxes" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Project Boxes</h3>
                             <p class=portofolio-description>Apps</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"><img src="images/desktop_writing.jpg" alt="writing desktop" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/desktop_writing.jpg" alt="writing desktop" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Inspiration has no Borders</h3>
                             <p class=portofolio-description>Web-site</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"><img src="images/book.jpg" alt="book" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/book.jpg" alt="book" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Limited Edition</h3>
                             <p class=portofolio-description>Design</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"><img src="images/lab_tag.jpg" alt="lab tag" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/lab_tag.jpg" alt="lab tag" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Project LAB</h3>
                             <p class=portofolio-description>Marketing</p>
                         </div>
+                    </a>
                     </li>
-                    <li class="portfol-list-item"> <img src="images/laptop_bussiness.jpg" alt="bussines desktop" width="370" height="294">
+                    <li class="scroll">
+                        <a class="link-portofolio" href="./portofolio.html">
+                            <div class="overlay-port">
+                                <img src="images/laptop_bussiness.jpg" alt="bussines desktop" width="370" height="294">
+                                <p class="overlay-text">
+                                    Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for
+                                    digital
+                                    espionage and attacks on competitors' secure servers.</p>
+                            </div>
                         <div class="portofolio-box">
                             <h3 class="portofolio-tittle">Growing Business</h3>
                             <p class=portofolio-description>Apps</p>
                         </div>
+                    </a>
                     </li>
                 </ul>
             
